2010-11-18  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Tony Chang.

        new-run-webkit-tests: create first part of 'message_broker' class for multiprocessing fixes

        Create the first version of the 'message_broker' package. This
        class will encapsulate all of the threading/multiprocessing and
        message-sending details for the communication between the
        'manager' object and the 'worker' objects. For the moment, it
        just holds some routines and tests for logging thread stacks.

        There should be no functional changes in this patch, just moving stuff
        around.

        https://bugs.webkit.org/show_bug.cgi?id=49707

        * Scripts/webkitpy/layout_tests/layout_package/dump_render_tree_thread.py:
        * Scripts/webkitpy/layout_tests/layout_package/dump_render_tree_thread_unittest.py: Removed.
        * Scripts/webkitpy/layout_tests/layout_package/message_broker.py: Added.
        * Scripts/webkitpy/layout_tests/layout_package/message_broker_unittest.py: Added.
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests_unittest.py:

2010-11-18  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Adam Roben.

        Remove leftover Windows Debug_Internal configurations
        https://bugs.webkit.org/show_bug.cgi?id=49758

        * DumpRenderTree/TestNetscapePlugIn/win/TestNetscapePlugin.vcproj:
        * DumpRenderTree/win/DumpRenderTree.vcproj:
        * DumpRenderTree/win/ImageDiff.vcproj:
        * MiniBrowser/MiniBrowser.vcproj:
        * TestWebKitAPI/win/TestWebKitAPI.vcproj:
        * WebKitAPITest/WebKitAPITest.vcproj:
        * WebKitTestRunner/win/InjectedBundle.vcproj:
        * WebKitTestRunner/win/WebKitTestRunner.vcproj:
        * WinLauncher/WinLauncher.vcproj:

2010-11-18  Adam Roben  <aroben@apple.com>

        Add three new Windows XP build slaves

        Reviewed by Steve Falkenburg.
