@@ -1,3 +1,13 @@
+2010-11-18  Kinuko Yasuda  <kinuko@chromium.org>
+
+        Reviewed by Ojan Vafai.
+
+        [Chromium] REGRESSION: Record actual test results in the JSON result summary for non-layout tests
+        https://bugs.webkit.org/show_bug.cgi?id=49702
+
+        * Scripts/webkitpy/layout_tests/layout_package/json_layout_results_generator.py:
+        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator.py:
+
 2010-11-18  Dirk Pranke  <dpranke@chromium.org>
 
         Reviewed by Tony Chang.
